# hello-specs-physics

./: .gitignore  Cargo.toml  tiled-export-script.py  vimrc
maps/: level.tmx  spritesheet.tsx
resources/config/: display.ron
resources/levels/: level.json
resources/ui/: ingame.ron  menu.ron
src/: helpers.rs  input.rs  main.rs  music.rs  solid_tag.rs
src/components/: decrease_velocity.rs  mod.rs  player.rs  size.rs
src/level_loader/: build_camera.rs  build_player.rs  build_tiles.rs  mod.rs
src/states/: ingame.rs  main_menu.rs  mod.rs
src/systems/: decrease_velocities.rs  mod.rs  move_player.rs  scale_sprites.rs
