[package]
name = "hello-specs-physics"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[dependencies]
amethyst      = { version = "0.13.1", features = ["vulkan"] }
deathframe    = { path = "../deathframe", version = "0.3.1" }
serde         = { version = "1.0.101", features = ["derive"] }
specs-physics = "0.3.0"
ron           = "0.5.1"

[features]
nightly = ["amethyst/nightly"]
