[package]
name = "hello-specs-physics"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[dependencies]
amethyst      = { version = "0.13.2", features = ["vulkan"] }
json          = "0.12.0"
regex         = "1.3.1"
ron           = "0.5.1"
serde         = { version = "1.0.101", features = ["derive"] }
specs-physics = "0.3.0"

[features]
nightly = ["amethyst/nightly"]
